# src/main/java/ch/bbw/m320/restintro/ArticleController.java
@@ -8,8 +8,12 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.lang.Nullable;
 import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -26,8 +30,8 @@ public class ArticleController {
 	private final HashMap<Integer, ArticleDto> articles = new HashMap<>();
 
 	public ArticleController() {
-		ArticleDto newArticle = new ArticleDto("Why amogus is sus", "because it's the impostor",
-				List.of("politics"));
+		ArticleDto newArticle = new ArticleDto("ACAB", "Death to America",
+				List.of("politics", "1312"));
 		post(newArticle);
 	}
 
@@ -38,18 +42,59 @@ public class ArticleController {
 
 	@PostMapping
 	public ResponseEntity<ArticleDto> post(@RequestBody ArticleDto article) {
-		if (article.headline.equals("capitalism is good")) {
+		if (NoMisinformationError.isMisinformation(article)) {
 			throw new NoMisinformationError();
 		}
 		var id = articles.size();
 		ArticleDto newArticle = new ArticleDto(id, article);
+		articles.put(id, newArticle);
 		return ResponseEntity.status(HttpStatus.CREATED).body(newArticle);
+	}
+
+	@PutMapping("/api/article/{id}")
+	public ArticleDto put(@PathVariable int id, @RequestBody ArticleDto article) {
+		// if (NoMisinformationError.isMisinformation(article)) {
+		// throw new NoMisinformationError();
+		// }
+		var newArticle = new ArticleDto(id, article);
+		articles.put(id, newArticle);
+		return newArticle;
+	}
+	// @PatchMapping("/api/article/{id}")
+	// public ArticleDto patch(@PathVariable int id, @RequestBody ArticleDto
+	// article) {
+	// // if (NoMisinformationError.isMisinformation(article)) {
+	// // throw new NoMisinformationError();
+	// // }
+	// var newArticle = new ArticleDto(id, article);
+	// articles.put(id, newArticle);
+	// return newArticle;
+	// }
+	// @PatchMapping("/api/article/{id}")
+	// public ResponseEntity<ArticleDto> patch(@PathVariable int id, @RequestBody
+	// ArticleDto article) {
+	// if (NoMisinformationError.isMisinformation(article)) {
+	// throw new NoMisinformationError();
+	// }
+	// var newArticle = new ArticleDto(id, article);
+	// articles.put(newArticle.id, newArticle);
+	// return ResponseEntity.status(HttpStatus.OK).body(newArticle);
+	// }
+
+	@DeleteMapping("/api/article/{id}")
+	public ResponseEntity<ArticleDto> delete(@PathVariable int id) {
+		articles.remove(id);
+		return ResponseEntity.status(HttpStatus.NO_CONTENT).body(null);
 	}
 
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
 	static class NoMisinformationError extends IllegalArgumentException {
 		public NoMisinformationError() {
 			super("no misinformation allowed");
+		}
+
+		static boolean isMisinformation(ArticleDto article) {
+			return article.headline.equals("capitalism is good");
 		}
 	}
 
@@ -62,6 +107,10 @@ public class ArticleController {
 
 		public ArticleDto(String headline, String content) {
 			this(0, headline, content, List.of(), 0, 0, new Date());
+		}
+
+		public ArticleDto(int id, String headline, String content) {
+			this(id, headline, content, List.of(), 0, 0, new Date());
 		}
 
 		public ArticleDto(String headline, String content, List<String> tags) {
